--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 </nav>
     <main>
+<div>
+    <section id="videos" class="w-11/12 border-2 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10"></section>
+</div>
+
     </main>
     <footer>
 
