show test.js equation run

--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
         <!-- nav-bar end -->
     </header>
 
-<nav id="categories" class="flex justify-center items-center py-3  gap-5">
+    <nav id="categories" class="flex justify-center items-center py-3  gap-5">
 
-</nav>
+    </nav>
     <main>
-<div>
-    <section id="videos" class="w-11/12 border-2 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10"></section>
-</div>
+        <div>
+            <section id="" class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10">
+            </section>
+        </div>
 
     </main>
     <footer>
@@ -46,7 +47,8 @@
     </footer>
 
     <!-- javascript linking -->
-<script src="script/video.js"></script>
+    <script src="script/video.js"></script>
 </body>
 
 </html>
+.
